--- a/Project.toml
+++ b/Project.toml
@@ -5,14 +5,16 @@ version = "1.0.0-DEV"
 
 [deps]
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+Gtk4 = "9db2cae5-386f-4011-9d63-a5602296539b"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-julia = "1"
 GLMakie = "0.9.5"
 PolygonOps = "0.1.2"
 StatsBase = "0.34.2"
+Gtk4 = "0.6.0"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
