--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Z.M. Vig <zvig@umd.edu> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+ColorBrewer = "a2cac450-b92f-5266-8821-25eda20663c8"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Gtk4 = "9db2cae5-386f-4011-9d63-a5602296539b"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
@@ -11,9 +12,9 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 GLMakie = "0.9.5"
+Gtk4 = "0.6.0"
 PolygonOps = "0.1.2"
 StatsBase = "0.34.2"
-Gtk4 = "0.6.0"
 julia = "1"
 
 [extras]
