--- a/Project.toml
+++ b/Project.toml
@@ -12,20 +12,20 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ENVI = "cdc236e2-05f6-455d-8b36-4ce943f8ee7a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
-Gtk4 = "9db2cae5-386f-4011-9d63-a5602296539b"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Mousetrap = "5deeb4b9-6e04-4da7-8b7f-c77fb1eae65e"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+libmousetrap_jll = "287f9a42-973b-50d0-ae32-9952e735a47d"
 
 [compat]
 GLMakie = "0.9.5"
-Gtk4 = "0.6.0"
 PolygonOps = "0.1.2"
 Statistics = "1.9.0"
 StatsBase = "0.34.2"
