--- a/Project.toml
+++ b/Project.toml
@@ -6,10 +6,13 @@ version = "1.0.0-DEV"
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
@@ -19,7 +22,10 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 [compat]
 ArchGDAL = "0.10.5"
 Colors = "0.12.11"
+DSP = "0.8.0"
 GLFW = "3.4.3"
 Gtk = "1.3.0"
+Interpolations = "0.15.1"
+LazySets = "3.0.0"
 LinearAlgebra = "1.11.0"
 Polynomials = "4.0.12"
