--- a/Project.toml
+++ b/Project.toml
@@ -5,8 +5,11 @@ version = "1.0.0-DEV"
 
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+ColorVectorSpace = "c3611d14-8923-5661-9e6a-0046d554d3a4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
@@ -21,8 +24,11 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 ArchGDAL = "0.10.5"
+CairoMakie = "0.12.18"
+ColorVectorSpace = "0.10.0"
 Colors = "0.12.11"
 DSP = "0.8.0"
+Dates = "1.11.0"
 GLFW = "3.4.3"
 Gtk = "1.3.0"
 Interpolations = "0.15.1"
