--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ColorVectorSpace = "c3611d14-8923-5661-9e6a-0046d554d3a4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
@@ -20,6 +21,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
@@ -29,9 +31,11 @@ ColorVectorSpace = "0.10.0"
 Colors = "0.12.11"
 DSP = "0.8.0"
 Dates = "1.11.0"
+Distributions = "0.25.119"
 GLFW = "3.4.3"
 Gtk = "1.3.0"
 Interpolations = "0.15.1"
 LazySets = "3.0.0"
 LinearAlgebra = "1.11.0"
 Polynomials = "4.0.12"
+ProgressMeter = "1.10.4"
