--- a/Project.toml
+++ b/Project.toml
@@ -23,21 +23,17 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+SpectralOps = "0e03c639-5e6a-4540-963f-6e6321454b6b"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 ArchGDAL = "0.10.5"
-CairoMakie = "0.12.18"
 ColorSchemes = "3.29.0"
-ColorVectorSpace = "0.10.0"
-Colors = "0.12.11"
 DSP = "0.8.0"
 Dates = "1.11.0"
 Distributions = "0.25.119"
 GLFW = "3.4.3"
 Gtk = "1.3.0"
-Interpolations = "0.15.1"
-LazySets = "3.0.0"
 LinearAlgebra = "1.11.0"
 Polynomials = "4.0.12"
 ProgressMeter = "1.10.4"
